<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/movie_detail_linear"
    android:layout_marginTop="@dimen/synopsys_margin_top"
    tools:context="nanodegree.rahall.popularmovies2.activities.MovieDetails">

    <RelativeLayout
        android:id="@+id/movie_detail_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#22BBBB"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:text="Movie Title"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"

            />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/movie_detail_linear"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/movie_title"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/movie_image_linearlayout"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/movie_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:scaleType="centerInside"

                    />
            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/movie_detail_text_linear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:weightSum="@string/detail_textview_weight_sum">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_textview_layout_height"
                    android:layout_weight="@string/detail_textview_weight"

                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <LinearLayout
                        android:id="@+id/movie_length_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"


                        >

                        <TextView
                            android:id="@+id/movie_length"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:editTextColor="@color/DetailTextColor"
                            android:gravity="center_vertical"
                            android:text="Length"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/image_favorite_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:clickable="true"

                        >

                        <ImageView
                            android:id="@+id/image_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:scaleType="centerInside"
                            android:background="@drawable/touch_background"
                            android:padding="5dp"
                            android:src="@drawable/ic_star_black_36dp"

                            />
                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:id="@+id/release_date"
                    style="@style/EditTextDetail"
                    android:text="Release date" />

                <TextView
                    android:id="@+id/revenue"
                    style="@style/EditTextDetail"
                    android:text="Revenue" />


                <TextView
                    android:id="@+id/vote_average"
                    style="@style/EditTextDetail"
                    android:text="Vote Average"


                    />

                <TextView
                    android:id="@+id/vote_count"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"

                    android:text="Vote Count"
                    android:textColor="#a9a9a9"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/movie_detail_linear2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/movie_detail_linear"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="gotoLink"
                android:text="Home Page"
                android:textColor="@color/LinkTextColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/synopsys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:text="Synopsys"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:text="@string/trailers"
                android:textSize="20sp"
                android:textStyle="bold" />
            <View android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trailer_linear_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/movie_detail_linear2"
            android:orientation="vertical">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/reviews_title_linear_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/trailer_linear_layout"
            android:orientation="vertical">
            <TextView
                android:id="@+id/review_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:text="@string/reviews_title"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reviewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reviews_title_linear_layout"
            android:orientation="vertical"></LinearLayout>

    </RelativeLayout>
</ScrollView>
